tests/lean/run/grind_pre.lean
abbrev f (a : őĪ) := a

set_option grind.debug true
set_option grind.debug.proofs true

/--
error: `grind` failed
case grind.1.2
a b c : Bool
p q : Prop
left‚úĚ : a = true
right‚úĚ : b = true ‚ą® c = true
left : p
right : q
x‚úĚ : b = false ‚ą® a = false
h‚úĚ : b = false
h : c = true
‚äĘ False
-/
#guard_msgs (error) in
theorem ex (h : (f a && (b || f (f c))) = true) (h' : p ‚ąß q) : b && a := by
  grind

open Lean.Grind.Eager in
/--
error: `grind` failed
case grind.2.1
a b c : Bool
p q : Prop
left‚úĚ : a = true
h‚úĚ : c = true
left : p
right : q
h : b = false
‚äĘ False
-/
#guard_msgs (error) in
theorem ex2 (h : (f a && (b || f (f c))) = true) (h' : p ‚ąß q) : b && a := by
  grind

def g (i : Nat) (j : Nat) (_ : i > j := by omega) := i + j

/--
error: `grind` failed
case grind
i j : Nat
h : j + 1 < i + 1
h‚úĚ : j + 1 ‚Č§ i
x‚úĚ : ¬¨g (i + 1) j ‚čĮ = i + j + 1
‚äĘ False
-/
#guard_msgs (error) in
example (i j : Nat) (h : i + 1 > j + 1) : g (i+1) j = f ((fun x => x) i) + f j + 1 := by
  grind

structure Point where
  x : Nat
  y : Int

/--
error: `grind` failed
case grind
a‚āĀ : Point
a‚āā : Nat
a‚āÉ : Int
as : List Point
b‚āĀ : Point
bs : List Point
b‚āā : Nat
b‚āÉ : Int
head_eq : a‚āĀ = b‚āĀ
x_eq : a‚āā = b‚āā
y_eq : a‚āÉ = b‚āÉ
tail_eq : as = bs
‚äĘ False
-/
#guard_msgs (error) in
theorem ex3 (h : a‚āĀ :: { x := a‚āā, y := a‚āÉ : Point } :: as = b‚āĀ :: { x := b‚āā, y := b‚āÉ} :: bs) : False := by
  grind

def h (a : őĪ) := a

example (p : Prop) (a b c : Nat) : p ‚Üí a = 0 ‚Üí a = b ‚Üí h a = h c ‚Üí a = c ‚ąß c = a ‚Üí a = b ‚ąß b = a ‚Üí a = c := by
  grind

set_option trace.grind.debug.proof true
/--
error: `grind` failed
case grind.1
őĪ : Type
a : őĪ
p q r : Prop
h‚āĀ : HEq p a
h‚āā : HEq q a
h‚āÉ : p = r
left : ¬¨p ‚ą® r
right : ¬¨r ‚ą® p
h : ¬¨r
‚äĘ False

case grind.2
őĪ : Type
a : őĪ
p q r : Prop
h‚āĀ : HEq p a
h‚āā : HEq q a
h‚āÉ : p = r
left : ¬¨p ‚ą® r
right : ¬¨r ‚ą® p
h : p
‚äĘ False
-/
#guard_msgs (error) in
example (a : őĪ) (p q r : Prop) : (h‚āĀ : HEq p a) ‚Üí (h‚āā : HEq q a) ‚Üí (h‚āÉ : p = r) ‚Üí False := by
  grind

example (a b : Nat) (f : Nat ‚Üí Nat) : (h‚āĀ : a = b) ‚Üí (h‚āā : f a ‚Č† f b) ‚Üí False := by
  grind

example (a : őĪ) (p q r : Prop) : (h‚āĀ : HEq p a) ‚Üí (h‚āā : HEq q a) ‚Üí (h‚āÉ : p = r) ‚Üí q = r := by
  grind

/--
info: [grind.issues] found congruence between
      g b
    and
      f a
    but functions have different types
---
warning: declaration uses 'sorry'
-/
#guard_msgs in
set_option trace.grind.issues true in
set_option trace.grind.debug.proof false in
example (f : Nat ‚Üí Bool) (g : Int ‚Üí Bool) (a : Nat) (b : Int) : HEq f g ‚Üí HEq a b ‚Üí f a = g b := by
  fail_if_success grind
  sorry
